--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<header>
+    <h1>British Royal Family</h1>
+</header>
+
 <body>
     <main>
-        <p>Royal watching fan!</p>
+        <h2>Queen Elizabeth II</h2>
+        <p>At the helm of the British Royal Family is Queen Elizabeth II. Having just surpassed her 67th coronation anniverary on June 2, 2020, she is now the longest reigning monarch in British history.</p>
+        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/hbz-queen-elizabeth-through-the-years-00-index-gettyimages-515462734-1555601021.jpg"
+            alt="hbz-queen-elizabeth-through-the-years-00-index-gettyimages-515462734-1555601021" width="300px"
+            height="150px" />
     </main>
 </body>
+
 </html>
